# swig-reproducer

./: CMakeLists.txt  Main.java  interface.h  interface.i  main.cpp  observable.cpp  observable.h  observation.i  observer.cpp  observer.h
